# nitrokey-app

./: .SRCINFO  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  3RDPARTY.txt  40-nitrokey.rules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CryptoStickGUI_QT5.pro  DeviceCommunicationExceptions.cpp  Info.plist  Makefile  Makefile.top  NK_C_API.h  NitrokeyManager.cc  OTP_full_specification.txt  PKGBUILD  README.md  TODO  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  app.loc.txt  appico.rc  appveyor.yml  base32.cpp  base32.h  build.deb  cmake_install.cmake  coding-styles.sh  command.cpp  command.h  command_id.cc  crc32.cpp  crc32.h  (+81 more)
.github/: issue_template.md
.github/workflows/: codeql-analysis.yml
CMake/Modules/: FindLibnotify.cmake
_debian/: changelog
ci-scripts/: appimage.sh  build.sh  com.nitrokey.app.json  deb.sh  flatpak.sh  mxe.sh  package.sh  snapcraft.sh
ci-scripts/OSX/: build.sh  create-dmg.sh  dmgbuild-settings.py
ci-scripts/dockerfiles/: upload_docker.sh
ci-scripts/dockerfiles/nitrokey-app-appimages-agent/: Dockerfile
data/: 40-nitrokey.rules  com.nitrokey.nitrokey-app.appdata.xml  nitrokey-app-small.xpm  nitrokey-app.1  nitrokey-app.desktop
data/bash-autocomplete/: nitrokey-app
debian/: changelog  control  copyright  docs  nitrokey-app.menu  postinst  rules
debian_/: changelog  nitrokey-app.dirs  nitrokey-app.postinst
i18n/: CMakeLists.txt  nitrokey_Arabic.ts  nitrokey_Deutsch.ts  nitrokey_English.ts  nitrokey_Francais.qm  nitrokey_Francais.ts  nitrokey_Italiano.ts  nitrokey_Polski.qm  nitrokey_Polski.ts  nitrokey_ar.qm  nitrokey_ar.ts  nitrokey_arabic.qm  nitrokey_arabic.ts  nitrokey_de_DE.qm  nitrokey_de_DE.ts  nitrokey_en.qm  nitrokey_en.ts  nitrokey_fr.qm  nitrokey_fr.ts  nitrokey_it.qm  nitrokey_it.ts  nitrokey_pl.qm  nitrokey_pl.ts  nitrokey_sv_SE.ts
images/: CS_icon.icns  splash.png.bak
include/: CommandFailedException.h  DeviceCommunicationExceptions.h  NitrokeyManager.h  command.h  command_id.h  device_proto.h  log.h  stick10_commands.h  stick10_commands_0.8.h  stick20_commands.h
install/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  nitrokey-app-1.0-Linux.rpm  qrc_resources.cpp
install/_CPack_Packages/Linux/RPM/: rpmbuild.err  (+1 more)
libnitrokey/: .travis.yml  CHANGELOG.md  CMakeLists.txt  CommandFailedException.h  DeviceCommunicationExceptions.cpp  NK_C_API.cc  NK_C_API.h  NitrokeyManager.cc  NitrokeyManager.h  README.md  command.h  command_id.h  device.cc  device.h  dissect.h  libnitrokey.pro  log.cc  misc.cc  misc.h  python_bindings_example.py  stick10_commands.h
libnitrokey/hidapi/mac/: hid.c
libnitrokey/hidapi/windows/: hid.c
libnitrokey/include/: DeviceCommunicationExceptions.h  LibraryException.h  LongOperationInProgressException.h  NitrokeyManager.h  command.h  cxx_semantics.h  device.h  device_proto.h  dissect.h  log.h  misc.h  stick10_commands.h  stick10_commands_0.8.h
libnitrokey/libnitrokey/: DeviceCommunicationExceptions.h  LibraryException.h  LongOperationInProgressException.h  cxx_semantics.h  device_proto.h  log.h  stick10_commands_0.8.h  stick20_commands.h
libnitrokey/unittest/: catch_main.cpp  conftest.py  constants.py  requirements.txt  setup_python_dependencies.sh  test.cc  test2.cc  test3.cc  test_C_API.cpp  test_HOTP.cc  test_command_ids_header.h  test_issues.cc  test_library.py  test_multiple.py  test_multiple_devices.cc  test_pro.py  test_storage.py
nsis/: nitrokey-app.nsis
po/: nitrokey-app.pot
po/de_DE/: nitrokey-app.mo  nitrokey-app.po
po/fr/: nitrokey-app.mo  nitrokey-app.po
qss/: default.qss
release/: nitrokey-app-0.2-Linux.deb  nitrokey-app-0.2-Linux.deb.md5  nitrokey-app-0.2-Linux.deb.sha512  nitrokey-app-0.2-Linux.rpm.md5  nitrokey-app-0.2-Linux.rpm.sha512
scripts/: fix-deb.sh
setup/gui/: nitrokey-app.desktop
src/: command.cpp  command.h  device.cpp  device.h  hotpslot.cpp  hotpslot.h  inttypes.h  libada.cpp  libada.h  libnitrokey_adapter.cpp  libnitrokey_adapter.h  main.cpp  mcvs-wrapper.h  response.cpp  response.h  systemutils.cpp  systemutils.h  totpslot.cpp  totpslot.h  version.h
src/GUI/: Authentication.cpp  Authentication.h  Clipboard.cpp  Clipboard.h  ManageWindow.cpp  ManageWindow.h  StorageActions.cpp  StorageActions.h  Tray.cpp  Tray.h  graphicstools.cpp  graphicstools.h
src/core/: ScopedGuard.h  SecureString.cpp  SecureString.h  ThreadWorker.cpp  ThreadWorker.h
src/ui/: Clipboard.cpp  Clipboard.h  OwnSleep.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  hotpdialog.cpp  hotpdialog.h  licensedialog.cpp  licensedialog.h  licensedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nitrokey-applet.cpp  nitrokey-applet.h  passworddialog.cpp  passworddialog.h  passworddialog.ui  passwordsafedialog.cpp  passwordsafedialog.h  pindialog.cpp  pindialog.h  pindialog.ui  securitydialog.cpp  securitydialog.h  splash.cpp  splash.h  stick20-response-task.cpp  stick20-response-task.h  stick20changepassworddialog.cpp  stick20changepassworddialog.h  stick20changepassworddialog.ui  stick20debugdialog.cpp  stick20debugdialog.h  stick20debugdialog.ui  stick20dialog.cpp  stick20dialog.h  stick20hiddenvolumedialog.cpp  stick20hiddenvolumedialog.h  (+18 more)
src/utils/: base32.cpp  base32.h  bool_values.h  crc32.cpp  crc32.h  global_shortcut.h  gui.cpp  gui.h  hid_libusb.c  hid_mac.c  hid_win.c  hidapi.h  sleep.h  stick20hid.c  stick20hid.h
support/: appveyor-build.py
ui/: aboutdialog.ui  hotpdialog.ui  mainwindow.ui  passworddialog.ui  passwordsafedialog.ui  pindialog.ui  securitydialog.ui  stick20changepassworddialog.ui  stick20debugdialog.ui  stick20dialog.ui  stick20hiddenvolumedialog.ui  stick20infodialog.ui  stick20lockfirmwaredialog.ui  stick20matrixpassworddialog.ui  stick20responsedialog.ui  stick20setup.ui  stick20updatedialog.ui
unittest/: catch_main.cpp  conftest.py  constants.py  misc.py  requirements.txt  test.cc  test2.cc  test3.cc  test_C_API.cpp  test_HOTP.cc  test_command_ids_header.h  test_issues.cc  test_library.py  test_offline.cc  test_pro.py
(+13 files in other folders)
